deploy/local-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenants-api
  namespace: local
spec:
  selector:
    app: tenants-api
  ports:
    - port: 80
      targetPort: 3000
