deploy/local-k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tenants-api
  namespace: local
  labels:
    app: tenants-api
    env: local
spec:
  parentRefs:
    - name: gateway
      namespace: local
  hostnames:
    - api.fbi.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /tenants
      backendRefs:
        - name: tenants-api
          port: 80
